# Electif

./: .gitignore  README.md  requirements.txt
seance_1/: echauffement.py  gen_isbn.py  isbn.py  isbn_stats.py
seance_10/: CompteRendu.md
seance_10/EdT_Solver/: pyproject.toml
seance_10/EdT_Solver/src/edt_solver/: __init__.py  affichage.py  solver.py
seance_10/Sujet/: files
seance_10/WebEDT/: db.sqlite3  manage.py
seance_10/WebEDT/WebEDT/: asgi.py  settings.py  urls.py  wsgi.py
seance_10/WebEDT/edt/: admin.py  models.py  urls.py  views.py
seance_10/WebEDT/edt/migrations/: 0001_initial.py  0002_classe_cours_curriculum_delete_choice_and_more.py  0003_salle.py  0004_alter_cours_intitule_cours_edt.py  0005_remove_edt_classe_remove_edt_cours_remove_edt_salle_and_more.py
seance_11/: ordi.py
seance_2/: isbn10.py
seance_2/Programmes Fournis/: addition.py  division.py  entiers.py  listes.py
seance_3/: analyse_spectrale.md  mixer.py
seance_4/: TD.ipynb  TD.py  TD4.ipynb
seance_5/: TD4-5-Correction.ipynb  TD5.ipynb  TD5.py  fr-esr-parcours-et-reussite-des-bacheliers-en-licence.csv
seance_6/Code/: Structure_de_donnees.md  mixer.py  musique.txt  parser.py
seance_6/Sujet/: sujet.tex
seance_7/: CompteRendu.md
seance_7/Code/: Fluo.py  routes.py  stations.py
seance_7/fichiers/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
seance_8/: CompteRendu.md
seance_8/Code/: EdT.py  affichage.py
seance_9/: README.md  messagepassing.sty
seance_9/Code/: bot.py  chat.py
(+7 files in other folders)
